apps/trailarr/k8s.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trailarr
  namespace: downloader
  labels:
    app.kubernetes.io/name: trailarr
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: trailarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: trailarr
    spec:
      nodeSelector:
        node-role/workload: zfs
      containers:
        - name: trailarr
          image: nandyalu/trailarr:0.13.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 7889
              protocol: TCP
          volumeMounts:
            - name: config-vol
              mountPath: /config
            - name: video-vol
              mountPath: /vol_raidz1/video
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "2000m"
      restartPolicy: Always
      volumes:
        - name: config-vol
          persistentVolumeClaim:
            claimName: longhorn-pvc-trailarr-config
        - name: video-vol
          hostPath:
            path: /vol_raidz1/video
            type: Directory
