apps/trailarr/k8s.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: trailarr
  namespace: downloader
  labels:
    app.kubernetes.io/name: trailarr
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 7889
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: trailarr
